--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "bundle.js",
   "scripts": {
     "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js",
-    "prod": "NODE_ENV=production node ./server/server.js"
+    "prod": "NODE_ENV=production node ./server/server.js",
+    "postinstall": "webpack"
   },
   "repository": {
     "type": "git",
